--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>mx.com.alura.conversoralura/mx.com.alura.conversoralura.HelloApplication
+                            <mainClass>mx.com.alura.conversoralura/mx.com.alura.conversoralura.ConversorApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
